# fake-ci

./: .dockerignore  .editorconfig  .fakeci.yml  .gitignore  .hooks.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  sailr.json
book/: book.toml
book/src/: SUMMARY.md
book/src/admin/: index.md  installation.md  running.md
docs/: book.toml
docs/src/: SUMMARY.md
docs/src/admin/: running.md
resources/: docker-compose.yml  dummy.rs  watch_fakeci.toml  watch_fakeci.yml
resources/templates/notifs/: mail.html.hbs  mail.txt.hbs
resources/tests/: basic_config.yml  defaults.yml  docker_build.yml  job_container_reuse.yml  notifiers.yml  secrets.yml
resources/tests/notifs/: simple_smtp.toml  simple_smtp.yml
src/: conf.rs  lib.rs  main.rs
src/lib/: conf.rs  graph.rs  mod.rs
src/lib/notifications/: mail.rs  mod.rs
src/lib/notifs/: mail.rs  mod.rs
src/lib/utils/: docker.rs  git.rs  mod.rs
