[package]
name = "fake-ci"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fakeci"
path = "src/lib/mod.rs"

[[bin]]
name = "fake-ci"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0"
anyhow = "1"
log = "0"
pretty_env_logger = "0"
tempdir = "0"
rand = "0"
regex = "1"
lazy_static = "1"
chrono = { version = "0", features = ["serde"] }
# CLI deps
clap = "2"
signal-hook = "0"
glob = "0"
# notifications
lettre = { version = "0.9.6", optional = true }
lettre_email = { version = "0.9.4", optional = true }
handlebars = { version = "4.1", optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
pretty_assertions = "1"

[features]
default = ["notifications"]
notifications = ["mails"]
mails = ["lettre", "lettre_email", "handlebars", "serde_json"]
